--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.flash-image {
+/* .flash-image {
     animation: zoomIn 2s infinite;  
   }
   
@@ -12,7 +12,7 @@
     100% { 
       transform: scale(5);  
     }
-  }
+  } */
   
  
 body {
